Added time between visits
Former-commit-id: 69d8e30b66cd00f5862c634aab2ff2298fec4f46

--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "region_name = \"ALL_10-800_LOOSE\"  #\"TDS\" #\"CAINGSGII_10-800\"  #\"TDS\" #\"WD\" #\"MDIS_10-800\" # \"TDS_ELAISN1\"\n",
     "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\"_cat.fits\"\n",
-    "show_skymaps = True\n",
+    "show_skymaps = False\n",
     "show_sed = False\n",
     "load_src_from_file = False\n",
     "lc_block_srcs = 5 #Setup light curve plotting parameters\n",
@@ -46,7 +46,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "250fba4b-1add-4439-81d7-3e282470e4d8",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -117,7 +121,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6a60818bdbcf4a478eef93e70e313324",
+       "model_id": "5a150cefd37943b699b9a63fe64e3087",
        "version_major": 2,
        "version_minor": 0
       },
@@ -158,20 +162,22 @@
     "        vvis.plot_sed(tc_src,ax = axs[1])\n",
     "    plt.show()\n",
     "\n",
+    "    #If lomb scargle present and signal is at more than 3 sigma plot it too\n",
+    "    if \"tt_lombscargle\" in tc_src._table_names:\n",
+    "        if tc_src.tt_lombscargle[\"ls_peak_pval\"] < 0.002699796063:\n",
+    "            fig_ls, axs_ls = plt.subplots(1,2,figsize=(18, 6),squeeze=True, num=\"LS \" + str(rg_src_id), clear=True)\n",
+    "            axs_ls = axs_ls.flatten()\n",
+    "            vvis.plot_lombscargle(tc_src.tt_source_lc, ax=axs_ls[0], ax_lc = axs[0])\n",
+    "            vvis.plot_lombscargle(tc_src.tt_source_lc, ax=axs_ls[1],obs_filter=\"FUV\")\n",
+    "            plt.show()\n",
+    "            display(tc_src.tt_lombscargle)\n",
+    "\n",
     "    for table_name, col_names in dd_tab_col.items():\n",
     "        if table_name in tc_src._table_names:\n",
     "            print(\"\\n\",table_name,\":\")\n",
     "            display(tc_src.__dict__[table_name][col_names])\n",
     "\n",
-    "    #If lomb scargle present and signal is at more than 3 sigma plot it too\n",
-    "    if \"tt_lombscargle\" in tc_src._table_names:\n",
-    "        if tc_src.tt_lombscargle[\"ls_peak_pval\"] < 0.002699796063:\n",
-    "            display(tc_src.tt_lombscargle)\n",
-    "            fig_ls, axs_ls = plt.subplots(1,2,figsize=(12, 6),squeeze=True, num=\"LS \" + str(rg_src_id), clear=True)\n",
-    "            axs_ls = axs_ls.flatten()\n",
-    "            vvis.plot_lombscargle(tc_src.tt_source_lc, ax=axs_ls[0], ax_lc = axs[0])\n",
-    "            vvis.plot_lombscargle(tc_src.tt_source_lc, ax=axs_ls[1],obs_filter=\"FUV\")\n",
-    "            plt.show()\n",
+    "\n",
     "    \n",
     "    #tc_src.tt_sed.pprint_all()\n",
     "\n",
@@ -190,12 +196,16 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "b4b6f33c-ac4d-4467-a780-804bee76b0dd",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4f09aa561e04b4799e53b5f280281e7",
+       "model_id": "dc087109655b428888ac018d12a92730",
        "version_major": 2,
        "version_minor": 0
       },
@@ -233,24 +243,12 @@
    "execution_count": 5,
    "id": "c038cd88-42e8-4897-a277-bbf207f4c930",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c9f561fee39c4a74bc627e006e819bf7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(227, 243, 285, 309, 325, 332, 473, 51…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def plot_sky_src(rg_src_id=0, fd_idx=0, vis_idx = -1):\n",
     "    \n",
@@ -344,6 +342,9 @@
    "execution_count": 6,
    "id": "aaa5317e-41b7-47fe-9dca-29ae84bc127b",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
@@ -366,7 +367,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "22812e30-f572-4316-8360-7c239c95c6d2",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": []
   }
