Continued LombScargle implementation
Former-commit-id: 55c86a39ad0893d8eaab57aa9f483259d2b0ab78

--- a/vasca/examples/vasca_pipe_post_process.ipynb
+++ b/vasca/examples/vasca_pipe_post_process.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "950c4fbe-f5d0-447c-9d74-25af6ff290bf",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
     "do_cross_match = False                  # Does source matching with CDS\n",
     "do_src_prep = False                  # Gets additional info for sources listes in srcs_ids list below.\n",
     "do_variable_addition = False            # Adds variables of matched sources to tt_sources\n",
-    "do_LombScargle = False\n",
+    "do_LombScargle = True\n",
     "\n",
     "srcs_ids = []\n",
     "srcs_ids = [4993 ,13580 ,14504 ,30475 ,50388 ,52994 ,79477 ,120265 ,138783 ,139480 ,162697 ,204419 ,221349 ,228958 ,236839 ,253214 ,\n",
@@ -34,10 +34,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "937306a8-d6b3-45dd-981d-421919026ddb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2023-10-25 16:38:36.941\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mload_from_fits\u001b[0m:\u001b[36m330\u001b[0m - \u001b[34m\u001b[1mLoading file with name './vasca_pipeline/ALL_10-800_LOOSE/region_ALL_10-800_LOOSE_cat.fits'\u001b[0m\n",
+      "\u001b[32m2023-10-25 16:38:36.948\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mload_from_fits\u001b[0m:\u001b[36m341\u001b[0m - \u001b[34m\u001b[1mLoading table 'tt_fields'\u001b[0m\n",
+      "\u001b[32m2023-10-25 16:38:36.960\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mload_from_fits\u001b[0m:\u001b[36m341\u001b[0m - \u001b[34m\u001b[1mLoading table 'tt_filters'\u001b[0m\n",
+      "\u001b[32m2023-10-25 16:38:36.965\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mload_from_fits\u001b[0m:\u001b[36m341\u001b[0m - \u001b[34m\u001b[1mLoading table 'tt_visits'\u001b[0m\n",
+      "\u001b[32m2023-10-25 16:38:36.972\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mload_from_fits\u001b[0m:\u001b[36m341\u001b[0m - \u001b[34m\u001b[1mLoading table 'tt_sources'\u001b[0m\n",
+      "\u001b[32m2023-10-25 16:38:36.990\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mload_from_fits\u001b[0m:\u001b[36m341\u001b[0m - \u001b[34m\u001b[1mLoading table 'tt_detections'\u001b[0m\n",
+      "\u001b[32m2023-10-25 16:38:37.021\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mload_from_fits\u001b[0m:\u001b[36m341\u001b[0m - \u001b[34m\u001b[1mLoading table 'tt_coadd_detections'\u001b[0m\n",
+      "\u001b[32m2023-10-25 16:38:37.096\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mload_from_fits\u001b[0m:\u001b[36m341\u001b[0m - \u001b[34m\u001b[1mLoading table 'tt_coadd_sources'\u001b[0m\n",
+      "\u001b[32m2023-10-25 16:38:37.111\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mload_from_fits\u001b[0m:\u001b[36m341\u001b[0m - \u001b[34m\u001b[1mLoading table 'tt_src_id_map'\u001b[0m\n",
+      "\u001b[32m2023-10-25 16:38:37.118\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mload_from_fits\u001b[0m:\u001b[36m341\u001b[0m - \u001b[34m\u001b[1mLoading table 'tt_simbad'\u001b[0m\n",
+      "\u001b[32m2023-10-25 16:38:37.148\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mload_from_fits\u001b[0m:\u001b[36m341\u001b[0m - \u001b[34m\u001b[1mLoading table 'tt_gaiadr3'\u001b[0m\n",
+      "WARNING: UnitsWarning: 'log(cm.s**-2)' did not parse as fits unit: 'log' is not a recognized function If this is meant to be a custom unit, define it with 'u.def_unit'. To have it recognized inside a file reader or other code, enable it with 'u.add_enabled_units'. For details, see https://docs.astropy.org/en/latest/units/combining_and_defining.html [astropy.units.core]\n",
+      "\u001b[32m2023-10-25 16:38:37.220\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mload_from_fits\u001b[0m:\u001b[36m341\u001b[0m - \u001b[34m\u001b[1mLoading table 'tt_lombscargle'\u001b[0m\n",
+      "\u001b[32m2023-10-25 16:38:37.232\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.region\u001b[0m:\u001b[36mset_LombScargle\u001b[0m:\u001b[36m835\u001b[0m - \u001b[34m\u001b[1mRunning LombScargle..\u001b[0m\n",
+      "\u001b[32m2023-10-25 16:39:10.873\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.region\u001b[0m:\u001b[36mset_LombScargle\u001b[0m:\u001b[36m837\u001b[0m - \u001b[34m\u001b[1mStarting source loop\u001b[0m\n",
+      "\u001b[32m2023-10-25 16:39:31.646\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36madd_table\u001b[0m:\u001b[36m159\u001b[0m - \u001b[34m\u001b[1mAdding table 'region:tt_lombscargle'\u001b[0m\n",
+      "\u001b[32m2023-10-25 16:39:31.647\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36madd_table\u001b[0m:\u001b[36m166\u001b[0m - \u001b[33m\u001b[1mTable 'tt_lombscargle' already exists, overwriting\u001b[0m\n",
+      "\u001b[32m2023-10-25 16:39:31.697\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mwrite_to_fits\u001b[0m:\u001b[36m224\u001b[0m - \u001b[1mWriting file with name './vasca_pipeline/ALL_10-800_LOOSE/region_ALL_10-800_LOOSE_cat.fits'\u001b[0m\n",
+      "\u001b[32m2023-10-25 16:39:31.713\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mwrite_to_fits\u001b[0m:\u001b[36m264\u001b[0m - \u001b[34m\u001b[1mWriting table 'tt_fields'\u001b[0m\n",
+      "\u001b[32m2023-10-25 16:39:31.723\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mwrite_to_fits\u001b[0m:\u001b[36m264\u001b[0m - \u001b[34m\u001b[1mWriting table 'tt_filters'\u001b[0m\n",
+      "\u001b[32m2023-10-25 16:39:31.727\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mwrite_to_fits\u001b[0m:\u001b[36m264\u001b[0m - \u001b[34m\u001b[1mWriting table 'tt_visits'\u001b[0m\n",
+      "\u001b[32m2023-10-25 16:39:31.732\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mwrite_to_fits\u001b[0m:\u001b[36m264\u001b[0m - \u001b[34m\u001b[1mWriting table 'tt_sources'\u001b[0m\n",
+      "\u001b[32m2023-10-25 16:39:31.760\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mwrite_to_fits\u001b[0m:\u001b[36m264\u001b[0m - \u001b[34m\u001b[1mWriting table 'tt_detections'\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rg_src_id 227\n",
+      "ls_peak_power 0.20724782605017353\n",
+      "ls_peak_freq 0.06355605783610711\n",
+      "ls_peak_pval 1.6287164876490332e-09\n",
+      "ls_pval_alt_flt 0.9954682742556383\n",
+      "ls_model_rchiq 3.0704353476293504\n",
+      "ls_model_pval 5.896341474136372e-53\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2023-10-25 16:39:31.895\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mwrite_to_fits\u001b[0m:\u001b[36m264\u001b[0m - \u001b[34m\u001b[1mWriting table 'tt_coadd_detections'\u001b[0m\n",
+      "\u001b[32m2023-10-25 16:39:32.318\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mwrite_to_fits\u001b[0m:\u001b[36m264\u001b[0m - \u001b[34m\u001b[1mWriting table 'tt_coadd_sources'\u001b[0m\n",
+      "\u001b[32m2023-10-25 16:39:32.337\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mwrite_to_fits\u001b[0m:\u001b[36m264\u001b[0m - \u001b[34m\u001b[1mWriting table 'tt_src_id_map'\u001b[0m\n",
+      "\u001b[32m2023-10-25 16:39:32.342\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mwrite_to_fits\u001b[0m:\u001b[36m264\u001b[0m - \u001b[34m\u001b[1mWriting table 'tt_simbad'\u001b[0m\n",
+      "WARNING: VerifyWarning: Keyword name 'description' is greater than 8 characters or contains characters not allowed by the FITS standard; a HIERARCH card will be created. [astropy.io.fits.card]\n",
+      "\u001b[32m2023-10-25 16:39:32.387\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mwrite_to_fits\u001b[0m:\u001b[36m264\u001b[0m - \u001b[34m\u001b[1mWriting table 'tt_gaiadr3'\u001b[0m\n",
+      "WARNING: UnitsWarning: 'log(cm.s**-2)' did not parse as fits unit: 'log' is not a recognized function If this is meant to be a custom unit, define it with 'u.def_unit'. To have it recognized inside a file reader or other code, enable it with 'u.add_enabled_units'. For details, see https://docs.astropy.org/en/latest/units/combining_and_defining.html [astropy.units.core]\n",
+      "\u001b[32m2023-10-25 16:39:32.536\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mvasca.tables\u001b[0m:\u001b[36mwrite_to_fits\u001b[0m:\u001b[36m264\u001b[0m - \u001b[34m\u001b[1mWriting table 'tt_lombscargle'\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib widget\n",
     "import ipywidgets as widgets\n",
@@ -100,16 +164,6 @@
     "    for src_id in srcs_ids:\n",
     "        tc_src = rc.get_src_from_id(src_id, load_from_file = False)\n",
     "print(\"Done\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9a854919-7a36-4ac3-a8b9-720766fcf783",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dd_lcs = self.get_light_curve(rg_src_ids=tt_src[\"rg_src_id\"])\n"
    ]
   },
   {
