--- a/vasca/examples/inspect_periods.ipynb
+++ b/vasca/examples/inspect_periods.ipynb
@@ -13,7 +13,8 @@
     "srcs_ids = [4993 ,13580 ,14504 ,30475 ,50388 ,52994 ,79477 ,120265 ,138783 ,139480 ,162697 ,204419 ,221349 ,228958 ,236839 ,253214 ,\n",
     "            253670 ,256433 ,261213 ,331466 ,340464 ,381336 ,390864 ,489430 ,498065 ,525310 ,532554 ,533185 ,540235 ,583838 ,639720 ,\n",
     "            645215 ,645730 ,659787 ,666224 ,673175 ,680119 ,691408 ,714140 ,764827 ,1037284 ,1069077 ,1070938 ,1805505 ,1839206\n",
-    "            ,2527679 ,3074917 ,] # WD ALL_10-800-LOOSE"
+    "            ,2527679 ,3074917 ,] # WD ALL_10-800-LOOSE\n",
+    "srcs_ids = [227 ,243 ,285 ,309]"
    ]
   },
   {
@@ -25,45 +26,27 @@
     {
      "data": {
       "text/html": [
-       "<div><i>Table length=47</i>\n",
-       "<table id=\"table139875854195376\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<div><i>Table length=4</i>\n",
+       "<table id=\"table140318215317504\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>fd_src_id</th><th>nr_det</th><th>ra</th><th>dec</th><th>pos_err</th><th>pos_xv</th><th>pos_var</th><th>pos_cpval</th><th>pos_rchiq</th><th>coadd_src_id</th><th>coadd_dist</th><th>obs_filter_id</th><th>sel</th><th>flux</th><th>flux_err</th><th>flux_nxv</th><th>flux_var</th><th>flux_cpval</th><th>flux_rchiq</th><th>coadd_ffactor</th><th>coadd_fdiff_s2n</th><th>rg_fd_id</th><th>rg_src_id</th><th>nr_fd_srcs</th><th>hr</th><th>hr_err</th><th>simbad_match_id</th><th>gaiadr3_match_id</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th>arcsec</th><th>arcsec2</th><th>arcsec2</th><th></th><th></th><th></th><th>arcsec</th><th></th><th></th><th>1e-06 Jy</th><th>1e-06 Jy</th><th></th><th>1e-12 Jy2</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>int32</th><th>int32[2]</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>int64</th><th>float32</th><th>int32[2]</th><th>bool</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32</th><th>float32</th><th>int64</th><th>int32</th><th>int32</th><th>float32</th><th>float32</th><th>int32</th><th>int32</th></tr></thead>\n",
-       "<tr><td>-1</td><td>149 .. 75</td><td>334.37177337994245</td><td>0.14260354697811373</td><td>0.03619791</td><td>-0.040783845</td><td>0.25818115</td><td>0.5168897</td><td>0.8634286</td><td>13745</td><td>0.39278755</td><td>1 .. 2</td><td>True</td><td>138.31387 .. 137.74933</td><td>0.19226342 .. 0.48882502</td><td>0.0010596871 .. 0.001172697</td><td>30.370586 .. 67.69505</td><td>0.0 .. 2.9569552e-12</td><td>4.168547 .. 2.57761</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>4993</td><td>6</td><td>0.9947147</td><td>0.004240999</td><td>77</td><td>59</td></tr>\n",
-       "<tr><td>-1</td><td>67 .. 39</td><td>35.2418133124936</td><td>-5.3268123630922135</td><td>0.06502271</td><td>-0.3229914</td><td>0.15286975</td><td>1.0</td><td>0.28614402</td><td>1145</td><td>0.12559491</td><td>1 .. 2</td><td>True</td><td>15.821138 .. 6.6184993</td><td>0.107664794 .. 0.13884212</td><td>0.018202145 .. 0.016439592</td><td>5.4822593 .. 1.691587</td><td>0.0 .. 0.00016123278</td><td>7.048383 .. 2.0399196</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>13580</td><td>6</td><td>0.40061885</td><td>0.009090735</td><td>214</td><td>185</td></tr>\n",
-       "<tr><td>-1</td><td>60 .. 8</td><td>334.0564353836822</td><td>1.0823032174516622</td><td>0.071758375</td><td>-0.19766761</td><td>0.20903327</td><td>0.999543</td><td>0.47470582</td><td>182502</td><td>0.18124859</td><td>1 .. 2</td><td>True</td><td>38.38036 .. 2.679372</td><td>0.17047885 .. 0.243022</td><td>0.0013976777 .. -0.061310105</td><td>4.7909384 .. 0.08948734</td><td>1.1513696e-09 .. 0.9945474</td><td>2.5167742 .. 0.14530437</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>14504</td><td>5</td><td>0.069159366</td><td>0.007200482</td><td>234</td><td>209</td></tr>\n",
-       "<tr><td>-1</td><td>107 .. 67</td><td>334.89381197775845</td><td>0.8818548523370469</td><td>0.041174985</td><td>-0.08103674</td><td>0.2217848</td><td>0.8422387</td><td>0.74226123</td><td>-1</td><td>-1.0</td><td>1 .. 2</td><td>True</td><td>73.96888 .. 97.4021</td><td>0.17897125 .. 0.4263391</td><td>0.00086351973 .. 0.002901708</td><td>11.258695 .. 56.12075</td><td>5.322324e-07 .. 3.1927897e-08</td><td>1.8188289 .. 2.2414591</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>30475</td><td>4</td><td>1.3034943</td><td>0.007536973</td><td>380</td><td>350</td></tr>\n",
-       "<tr><td>-1</td><td>43 .. 3</td><td>160.98628310403117</td><td>58.125564453570256</td><td>0.074825816</td><td>-0.0422247</td><td>0.21750309</td><td>0.09029268</td><td>0.8487536</td><td>66343</td><td>0.08939208</td><td>1 .. 2</td><td>True</td><td>200.6113 .. 207.43813</td><td>0.38346985 .. 2.5625901</td><td>0.05843502 .. 0.021001792</td><td>2359.2112 .. 923.8086</td><td>0.0 .. 7.736314e-22</td><td>293.0358 .. 48.610947</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>50388</td><td>4</td><td>1.2079993</td><td>0.017565036</td><td>539</td><td>549</td></tr>\n",
-       "<tr><td>-1</td><td>64 .. 25</td><td>150.54540974779889</td><td>2.9726705626470653</td><td>0.056498617</td><td>-0.09341755</td><td>0.19603774</td><td>0.9513494</td><td>0.67751217</td><td>-1</td><td>-1.0</td><td>1 .. 2</td><td>True</td><td>121.049805 .. 152.51727</td><td>0.28894272 .. 0.717161</td><td>0.00071297085 .. 0.0003327147</td><td>20.466846 .. 45.010082</td><td>2.4744158e-09 .. 3.07255e-06</td><td>2.414412 .. 2.8759015</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>52994</td><td>4</td><td>1.3008265</td><td>0.0094726635</td><td>580</td><td>589</td></tr>\n",
-       "<tr><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td></tr>\n",
-       "<tr><td>-1</td><td>14 .. -1</td><td>289.38193004645626</td><td>-24.317275553240115</td><td>0.13391653</td><td>0.14687224</td><td>0.39796337</td><td>0.0037673684</td><td>1.5858692</td><td>-1</td><td>-1.0</td><td>1 .. 0</td><td>True</td><td>192.32353 .. -1.0</td><td>0.69674796 .. -1.0</td><td>0.0009987517 .. -100.0</td><td>43.771828 .. -1.0</td><td>2.9986267e-12 .. -1.0</td><td>6.3845806 .. -1.0</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>1069077</td><td>1</td><td>-1.0</td><td>-1.0</td><td>4096</td><td>5775</td></tr>\n",
-       "<tr><td>-1</td><td>12 .. -1</td><td>289.2255855772187</td><td>-24.774705471689778</td><td>0.14479735</td><td>-0.13610634</td><td>0.115526564</td><td>0.80486274</td><td>0.45871088</td><td>-1</td><td>-1.0</td><td>1 .. 0</td><td>True</td><td>114.39852 .. -1.0</td><td>0.61611843 .. -1.0</td><td>0.0017502978 .. -100.0</td><td>27.525177 .. -1.0</td><td>8.0754126e-10 .. -1.0</td><td>5.9696126 .. -1.0</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>1070938</td><td>1</td><td>-1.0</td><td>-1.0</td><td>4098</td><td>5784</td></tr>\n",
-       "<tr><td>-1</td><td>17 .. -1</td><td>210.00141652944322</td><td>3.21446645812717</td><td>0.123477906</td><td>0.15057498</td><td>0.41101447</td><td>0.003518554</td><td>1.5325837</td><td>666596</td><td>0.19368891</td><td>1 .. 0</td><td>True</td><td>147.22969 .. -1.0</td><td>0.7023897 .. -1.0</td><td>0.0027712362 .. -100.0</td><td>74.33389 .. -1.0</td><td>2.3525176e-13 .. -1.0</td><td>5.971573 .. -1.0</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>1805505</td><td>1</td><td>-1.0</td><td>-1.0</td><td>4860</td><td>-1</td></tr>\n",
-       "<tr><td>-1</td><td>15 .. -1</td><td>207.03531485024087</td><td>-30.479189687581155</td><td>0.13244738</td><td>-0.1224625</td><td>0.14153127</td><td>0.81857866</td><td>0.54091847</td><td>692140</td><td>0.088201396</td><td>1 .. 0</td><td>True</td><td>144.8098 .. -1.0</td><td>0.74000114 .. -1.0</td><td>0.0036297431 .. -100.0</td><td>87.941795 .. -1.0</td><td>1.1032699e-20 .. -1.0</td><td>9.209586 .. -1.0</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>1839206</td><td>1</td><td>-1.0</td><td>-1.0</td><td>4876</td><td>6853</td></tr>\n",
-       "<tr><td>-1</td><td>3 .. -1</td><td>123.35939395926069</td><td>3.353465465397161</td><td>0.39177275</td><td>-0.2683002</td><td>0.25808147</td><td>0.41750205</td><td>0.43673292</td><td>-1</td><td>-1.0</td><td>1 .. 0</td><td>True</td><td>9.705873 .. -1.0</td><td>0.41658217 .. -1.0</td><td>7.172699 .. -100.0</td><td>676.54626 .. -1.0</td><td>0.0 .. -1.0</td><td>514.77435 .. -1.0</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>2527679</td><td>1</td><td>-1.0</td><td>-1.0</td><td>-1</td><td>7406</td></tr>\n",
-       "<tr><td>-1</td><td>14 .. -1</td><td>10.880859092668379</td><td>-9.212517701516024</td><td>0.13539946</td><td>-0.07865829</td><td>0.1780793</td><td>0.44943702</td><td>0.69521385</td><td>-1</td><td>-1.0</td><td>1 .. 0</td><td>True</td><td>131.92952 .. -1.0</td><td>0.53079945 .. -1.0</td><td>0.0007392973 .. -100.0</td><td>17.00289 .. -1.0</td><td>5.6224e-07 .. -1.0</td><td>4.1677933 .. -1.0</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>3074917</td><td>1</td><td>-1.0</td><td>-1.0</td><td>5549</td><td>7859</td></tr>\n",
+       "<tr><td>-1</td><td>248 .. 144</td><td>150.19491669966794</td><td>2.0679206386322235</td><td>0.034894396</td><td>-0.33851302</td><td>0.18164578</td><td>1.0</td><td>0.3224277</td><td>959299</td><td>0.16131246</td><td>1 .. 2</td><td>True</td><td>14.191161 .. 8.757307</td><td>0.06079538 .. 0.09396652</td><td>0.0106525235 .. 0.005538589</td><td>3.7525566 .. 2.5326197</td><td>0.0 .. 1.772165e-13</td><td>3.841772 .. 2.1152527</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>227</td><td>10</td><td>0.6072997</td><td>0.0076302565</td><td>0</td><td>0</td></tr>\n",
+       "<tr><td>-1</td><td>252 .. 147</td><td>150.17992517033275</td><td>2.110325555655416</td><td>0.035408843</td><td>-0.24451591</td><td>0.30744642</td><td>0.99999994</td><td>0.566374</td><td>75245</td><td>0.13007154</td><td>1 .. 2</td><td>True</td><td>17.587757 .. 6.551935</td><td>0.06531105 .. 0.0799764</td><td>0.002130574 .. -0.0008621514</td><td>2.4555638 .. 1.3940743</td><td>1.3690256e-15 .. 0.583465</td><td>1.8763659 .. 0.9710373</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>243</td><td>10</td><td>0.3645722</td><td>0.0049660443</td><td>1</td><td>1</td></tr>\n",
+       "<tr><td>-1</td><td>244 .. 114</td><td>150.14575215591634</td><td>2.0430760561265466</td><td>0.03967842</td><td>-0.38290083</td><td>0.27473727</td><td>1.0</td><td>0.43058085</td><td>75401</td><td>0.11261488</td><td>1 .. 2</td><td>True</td><td>9.884236 .. 3.657634</td><td>0.05455299 .. 0.07133999</td><td>0.031847723 .. 0.033267822</td><td>4.287245 .. 1.2234199</td><td>0.0 .. 2.4905885e-06</td><td>6.90565 .. 1.7280945</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>285</td><td>10</td><td>0.36859575</td><td>0.008322803</td><td>3</td><td>2</td></tr>\n",
+       "<tr><td>-1</td><td>216 .. 31</td><td>150.12385136844162</td><td>2.358249206025685</td><td>0.05189303</td><td>-0.37029192</td><td>0.38448596</td><td>1.0</td><td>0.518402</td><td>75516</td><td>0.39484766</td><td>1 .. 2</td><td>True</td><td>4.4475236 .. 1.7711709</td><td>0.04511629 .. 0.09256162</td><td>0.02649166 .. 0.00075723574</td><td>1.0877458 .. 0.29965115</td><td>1.6119977e-28 .. 0.3227426</td><td>2.4625556 .. 1.099846</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>309</td><td>10</td><td>0.35776442</td><td>0.020704556</td><td>4</td><td>-1</td></tr>\n",
        "</table></div>"
       ],
       "text/plain": [
-       "<Table length=47>\n",
-       "fd_src_id   nr_det          ra         ... simbad_match_id gaiadr3_match_id\n",
-       "                           deg         ...                                 \n",
-       "  int32    int32[2]      float64       ...      int32           int32      \n",
-       "--------- --------- ------------------ ... --------------- ----------------\n",
-       "       -1 149 .. 75 334.37177337994245 ...              77               59\n",
-       "       -1  67 .. 39   35.2418133124936 ...             214              185\n",
-       "       -1   60 .. 8  334.0564353836822 ...             234              209\n",
-       "       -1 107 .. 67 334.89381197775845 ...             380              350\n",
-       "       -1   43 .. 3 160.98628310403117 ...             539              549\n",
-       "       -1  64 .. 25 150.54540974779889 ...             580              589\n",
-       "      ...       ...                ... ...             ...              ...\n",
-       "       -1  14 .. -1 289.38193004645626 ...            4096             5775\n",
-       "       -1  12 .. -1  289.2255855772187 ...            4098             5784\n",
-       "       -1  17 .. -1 210.00141652944322 ...            4860               -1\n",
-       "       -1  15 .. -1 207.03531485024087 ...            4876             6853\n",
-       "       -1   3 .. -1 123.35939395926069 ...              -1             7406\n",
-       "       -1  14 .. -1 10.880859092668379 ...            5549             7859"
+       "<Table length=4>\n",
+       "fd_src_id   nr_det           ra         ... simbad_match_id gaiadr3_match_id\n",
+       "                            deg         ...                                 \n",
+       "  int32    int32[2]       float64       ...      int32           int32      \n",
+       "--------- ---------- ------------------ ... --------------- ----------------\n",
+       "       -1 248 .. 144 150.19491669966794 ...               0                0\n",
+       "       -1 252 .. 147 150.17992517033275 ...               1                1\n",
+       "       -1 244 .. 114 150.14575215591634 ...               3                2\n",
+       "       -1  216 .. 31 150.12385136844162 ...               4               -1"
       ]
      },
      "metadata": {},
@@ -85,6 +68,10 @@
     "from astropy.units import cds\n",
     "from astropy.table import QTable\n",
     "from astropy.time import Time\n",
+    "from statsmodels.tsa.tsatools import detrend\n",
+    "from obspy.signal.detrend import spline\n",
+    "\n",
+    "import pandas as pd\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
@@ -123,12 +110,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6a97d2b65e654c95ac3a2d4c5ca88349",
+       "model_id": "51f70fc5799341f2bbd1f4b646639ce1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='rg_src_id', options=(4993, 13580, 14504, 30475, 50388, 52994, 7947…"
+       "interactive(children=(Dropdown(description='rg_src_id', options=(227, 243, 285, 309), value=227), Output()), _…"
       ]
      },
      "execution_count": 3,
@@ -173,13 +160,28 @@
     "        t_max = np.max(tt_lc[\"time\"][sel].quantity)\n",
     "        dt_tot =  t_max - t_min\n",
     "        dt_min = np.min(dt.quantity)\n",
-    "        f_min = 1/(dt_tot/4)\n",
+    "        f_min = 4/(dt_tot)\n",
     "        f_max = 1/(4*dt_min)\n",
+    "#        f_min = (f_min + f_max)/4\n",
     "    \n",
     "        # Run LS\n",
     "        ls = LombScargle(tt_lc[\"time\"][sel], tt_lc[\"flux\"][sel],tt_lc[\"flux_err\"][sel]) #normalization{‘standard’, ‘model’, ‘log’, ‘psd’},\n",
     "        freq,power = ls.autopower(minimum_frequency=f_min,maximum_frequency=f_max) #nyquist_factor=5\n",
-    "    \n",
+    "        \n",
+    "        lg_freq = np.log10(freq)\n",
+    "        lg_power = np.log10(power)\n",
+    "        np.polyfit(lg_freq, lg_power)\n",
+    "\n",
+    "        \n",
+    "        #df_ls = pd.DataFrame(data={\"power\":np.log10(power),\"freq\":freq})\n",
+    "        #display(df_ls)\n",
+    "        #rolling_power = df_ls[\"power\"].rolling(window=100).mean()\n",
+    "        #power_detrend = (df_ls[\"power\"] - rolling_power)/rolling_power\n",
+    "        #power_detrend = 0.5*power_detrend/np.max(power_detrend)      \n",
+    "        #power_detrend = np.power(10,detrend(df_ls[\"power\"], order=1))\n",
+    "        #print(power_detrend)\n",
+    "        #print(freq)\n",
+    "        #print(freq[1:]-freq[:-1])\n",
     "        #Get confidence interval\n",
     "        conf = ls.false_alarm_level(probabilities)\n",
     "    \n",
@@ -205,9 +207,12 @@
     "        axs[panel].axhline(conf[0],linewidth=0.5, ls=\"--\", color='k', label=\"3/4/5 sigma\")\n",
     "        axs[panel].axhline(conf[1],linewidth=0.5, ls=\"--\", color='k')\n",
     "        axs[panel].axhline(conf[2],linewidth=0.5, ls=\"--\", color='k')\n",
-    "        axs[panel].plot(freq, power)\n",
+    "        #axs[panel].plot(freq,power_detrend, alpha=0.5)\n",
+    "        axs[panel].plot(freq, power, alpha=0.5)\n",
+    "\n",
     "    \n",
-    "        axs[panel].set_xscale(\"log\")\n",
+    "        #axs[panel].set_xscale(\"log\")\n",
+    "        #axs[panel].set_yscale(\"log\")\n",
     "        axs[panel].set_xlabel('Frequency [1/day]')\n",
     "        axs[panel].set_ylabel('LS power')\n",
     "        secax = axs[panel].secondary_xaxis(\"top\", functions=(freq2period, period2freq))\n",
