Modified selections in pipeline
Former-commit-id: b89e0af413ca45c7b75863a6ea75f48440f53971

--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -183,7 +183,8 @@
     "    \n",
     "    #tc_src.tt_sed.pprint_all()\n",
     "\n",
-    "widgets.interactive(display_src_info, rg_src_id=tt_srcs[\"rg_src_id\"])"
+    "widgets.interactive(display_src_info, rg_src_id=tt_srcs[\"rg_src_id\"])\n",
+    "#2572986 specially clear example"
    ]
   },
   {
