--- a/vasca/examples/vasca_pipe_post_process.ipynb
+++ b/vasca/examples/vasca_pipe_post_process.ipynb
@@ -19,6 +19,8 @@
     "region_name = \"ALL_10-800_LOOSE\" #\"CAINGSGII_10-800\"  #\"TDS\" #\"CAINGSGII_10-800\"  #\"TDS\" # \"MDIS_10-800\" # \"TDS\" # _ELAISN1\n",
     "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\".fits\"\n",
     "region_cat_fname = region_fname.replace(\".fits\",\"_cat.fits\")\n",
+    "\n",
+    "redo_src_selection = True\n",
     "do_cat = False                        # Recreate catalog file from vasca_pipe output region\n",
     "do_cross_match = False                  # Does source matching with CDS\n",
     "do_src_prep = False                  # Gets additional info for sources listes in srcs_ids list below.\n",
@@ -133,6 +135,9 @@
     "if do_cat:\n",
     "    rg = Region()\n",
     "    rg.load_from_fits(region_fname)\n",
+    "    if redo_src_selection:\n",
+    "        \n",
+    "    \n",
     "    rc = rg.get_region_catalog()\n",
     "else:\n",
     "    rc = Region()\n",
