Added black body fit
Former-commit-id: 9a33f6cef0fd5565a4ea055a5cbc6e21fdb98e8b

--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "region_name = \"ALL_10-800_LOOSE\"  #\"TDS\" #\"CAINGSGII_10-800\"  #\"TDS\" #\"WD\" #\"MDIS_10-800\" # \"TDS_ELAISN1\"\n",
     "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\"_cat.fits\"\n",
-    "show_skymaps = True\n",
+    "show_skymaps = False\n",
     "show_sed = True\n",
     "show_LS = True\n",
     "load_src_from_file = True\n",
@@ -44,17 +44,20 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "250fba4b-1add-4439-81d7-3e282470e4d8",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Nr sources: 10413 selected: 10413\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: UnitsWarning: 'log(cm.s**-2)' did not parse as fits unit: 'log' is not a recognized function If this is meant to be a custom unit, define it with 'u.def_unit'. To have it recognized inside a file reader or other code, enable it with 'u.add_enabled_units'. For details, see https://docs.astropy.org/en/latest/units/combining_and_defining.html [astropy.units.core]\n"
      ]
     }
    ],
@@ -65,7 +68,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
+    "#warnings.filterwarnings('ignore')\n",
     "\n",
     "from regions import CircleSkyRegion\n",
     "from astropy import units as uu\n",
@@ -112,26 +115,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "4e438a82-e94a-43c6-89ce-49862abc76dc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed99d0210a5545f1894d5ca90c27b36c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='rg_src_id', options=(4993, 13580, 14504, 30475, 50388, 52994, 7947…"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Define displayed tables and columns\n",
     "disp_tt_sources = ['ra','dec','rg_src_id','flux_cpval','nr_det','pos_err','pos_xv','pos_cpval','pos_rchiq','coadd_src_id','coadd_dist','obs_filter_id','flux','flux_err','flux_nxv','flux_rchiq','coadd_ffactor',\n",
@@ -195,30 +182,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b4b6f33c-ac4d-4467-a780-804bee76b0dd",
    "metadata": {
     "jupyter": {
      "source_hidden": true
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3fa1395eea9e47ce9a5abf8bdb0f186d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(IntSlider(value=4, description='block_nr', max=9), Output()), _dom_classes=('widget-inte…"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "nr_blocks = int(nr_srcs/lc_block_srcs)+1 \n",
     "def plot_lc_range(block_nr):\n",
@@ -241,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "c038cd88-42e8-4897-a277-bbf207f4c930",
    "metadata": {
     "jupyter": {
@@ -249,22 +220,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c945477b809b4296954bd36435e2660d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(4993, 13580, 14504, 30475, 50388, 529…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def plot_sky_src(rg_src_id=0, fd_idx=0, vis_idx = -1):\n",
     "    \n",
@@ -355,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "aaa5317e-41b7-47fe-9dca-29ae84bc127b",
    "metadata": {
     "jupyter": {
@@ -381,18 +337,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "22812e30-f572-4316-8360-7c239c95c6d2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 2 3] [0.66666667 0.33333333 0.        ]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = np.array([1,2,3])\n",
     "b = (a%1.5)/1.5\n",
