--- a/vasca/examples/inspect_matches.ipynb
+++ b/vasca/examples/inspect_matches.ipynb
@@ -16,7 +16,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from astropy import units as uu\n",
     "region_name = \"ALL_10-800_LOOSE\" #\"CAINGSGII_10-800\" #\"TDS\" #\"CAINGSGII_10-800\" #\"WD\" #\"MDIS_10-800\" #\"TDS\" #  _ELAISN1\n",
     "region_cat_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\"_cat.fits\""
    ]
@@ -45,6 +44,7 @@
     "from vasca.region import Region\n",
     "import vasca.visualization as vvis\n",
     "from vasca.utils import otype2ogroup,dd_ogrp2otypes, dd_ogrp2col, get_col_cycler,add_ogrp, color_palette, nb_fig\n",
+    "from astropy import units as uu\n",
     "\n",
     "# Get region\n",
     "rc = Region()\n",
@@ -554,97 +554,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "629ed7b2-65ae-4ce2-8356-f87fa06666a2",
-   "metadata": {},
-   "source": [
-    "### Print info for selected sources"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "abd8b156-4074-40cc-8edc-71223de1a691",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div><i>Table length=47</i>\n",
-       "<table id=\"table140386638161920\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>fd_src_id</th><th>nr_det</th><th>ra</th><th>dec</th><th>pos_err</th><th>pos_xv</th><th>pos_var</th><th>pos_cpval</th><th>pos_rchiq</th><th>coadd_src_id</th><th>coadd_dist</th><th>obs_filter_id</th><th>sel</th><th>flux</th><th>flux_err</th><th>flux_nxv</th><th>flux_var</th><th>flux_cpval</th><th>flux_rchiq</th><th>coadd_ffactor</th><th>coadd_fdiff_s2n</th><th>rg_fd_id</th><th>rg_src_id</th><th>nr_fd_srcs</th><th>hr</th><th>hr_err</th><th>simbad_match_id</th><th>gaiadr3_match_id</th><th>otype</th><th>ogrp_simbad</th><th>match_distance_simbad</th><th>PQSO</th><th>PGal</th><th>PSS</th><th>match_distance_gaiadr3</th><th>Gmag_abs</th><th>BP-RP</th><th>ogrp_gaiadr3</th><th>ls_peak_pval</th><th>ls_model_rchiq</th></tr></thead>\n",
-       "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th>arcsec</th><th>arcsec2</th><th>arcsec2</th><th></th><th></th><th></th><th>arcsec</th><th></th><th></th><th>1e-06 Jy</th><th>1e-06 Jy</th><th></th><th>1e-12 Jy2</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>arcsec</th><th></th><th></th><th></th><th>arcsec</th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
-       "<thead><tr><th>int32</th><th>int32[2]</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>int64</th><th>float32</th><th>int32[2]</th><th>bool</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32</th><th>float32</th><th>int64</th><th>int32</th><th>int32</th><th>float32</th><th>float32</th><th>int32</th><th>int32</th><th>bytes32</th><th>bytes8</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>bytes8</th><th>float32</th><th>float32</th></tr></thead>\n",
-       "<tr><td>-1</td><td>149 .. 75</td><td>334.37177337994245</td><td>0.14260354697811373</td><td>0.03619791</td><td>-0.040783845</td><td>0.25818115</td><td>0.5168897</td><td>0.8634286</td><td>13745</td><td>0.39278755</td><td>1 .. 2</td><td>True</td><td>138.31387 .. 137.74933</td><td>0.19226342 .. 0.48882502</td><td>0.0010596871 .. 0.001172697</td><td>30.370586 .. 67.69505</td><td>0.0 .. 2.9569552e-12</td><td>4.168547 .. 2.57761</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>4993</td><td>6</td><td>0.9947147</td><td>0.004240999</td><td>77</td><td>59</td><td>WD*</td><td>WD*</td><td>0.44933927</td><td>0.0</td><td>0.000106</td><td>5e-05</td><td>0.2508642</td><td>11.156714</td><td>-0.284372</td><td>WD*</td><td>0.008928546</td><td>3.5938787</td></tr>\n",
-       "<tr><td>-1</td><td>67 .. 39</td><td>35.2418133124936</td><td>-5.3268123630922135</td><td>0.06502271</td><td>-0.3229914</td><td>0.15286975</td><td>1.0</td><td>0.28614402</td><td>1145</td><td>0.12559491</td><td>1 .. 2</td><td>True</td><td>15.821138 .. 6.6184993</td><td>0.107664794 .. 0.13884212</td><td>0.018202145 .. 0.016439592</td><td>5.4822593 .. 1.691587</td><td>0.0 .. 0.00016123278</td><td>7.048383 .. 2.0399196</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>13580</td><td>6</td><td>0.40061885</td><td>0.009090735</td><td>214</td><td>185</td><td>QSO</td><td>AGN</td><td>0.52806926</td><td>0.993016</td><td>1e-05</td><td>0.006973</td><td>0.49571055</td><td>12.667274</td><td>0.670643</td><td>WD*</td><td>0.000118549106</td><td>4.4332905</td></tr>\n",
-       "<tr><td>-1</td><td>60 .. 8</td><td>334.0564353836822</td><td>1.0823032174516622</td><td>0.071758375</td><td>-0.19766761</td><td>0.20903327</td><td>0.999543</td><td>0.47470582</td><td>182502</td><td>0.18124859</td><td>1 .. 2</td><td>True</td><td>38.38036 .. 2.679372</td><td>0.17047885 .. 0.243022</td><td>0.0013976777 .. -0.061310105</td><td>4.7909384 .. 0.08948734</td><td>1.1513696e-09 .. 0.9945474</td><td>2.5167742 .. 0.14530437</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>14504</td><td>5</td><td>0.069159366</td><td>0.007200482</td><td>234</td><td>209</td><td>WD*</td><td>WD*</td><td>0.10859099</td><td>0.005006</td><td>0.0</td><td>5.4e-05</td><td>0.7428757</td><td>12.962516</td><td>0.243813</td><td>WD*</td><td>0.2466465</td><td>2.034905</td></tr>\n",
-       "<tr><td>-1</td><td>107 .. 67</td><td>334.89381197775845</td><td>0.8818548523370469</td><td>0.041174985</td><td>-0.08103674</td><td>0.2217848</td><td>0.8422387</td><td>0.74226123</td><td>-1</td><td>-1.0</td><td>1 .. 2</td><td>True</td><td>73.96888 .. 97.4021</td><td>0.17897125 .. 0.4263391</td><td>0.00086351973 .. 0.002901708</td><td>11.258695 .. 56.12075</td><td>5.322324e-07 .. 3.1927897e-08</td><td>1.8188289 .. 2.2414591</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>30475</td><td>4</td><td>1.3034943</td><td>0.007536973</td><td>380</td><td>350</td><td>WD?</td><td>WD*</td><td>0.47096086</td><td>1e-06</td><td>0.001718</td><td>5e-05</td><td>0.52298284</td><td>11.100542</td><td>0.008362</td><td>WD*</td><td>0.003767448</td><td>1.4492389</td></tr>\n",
-       "<tr><td>-1</td><td>43 .. 3</td><td>160.98628310403117</td><td>58.125564453570256</td><td>0.074825816</td><td>-0.0422247</td><td>0.21750309</td><td>0.09029268</td><td>0.8487536</td><td>66343</td><td>0.08939208</td><td>1 .. 2</td><td>True</td><td>200.6113 .. 207.43813</td><td>0.38346985 .. 2.5625901</td><td>0.05843502 .. 0.021001792</td><td>2359.2112 .. 923.8086</td><td>0.0 .. 7.736314e-22</td><td>293.0358 .. 48.610947</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>50388</td><td>4</td><td>1.2079993</td><td>0.017565036</td><td>539</td><td>549</td><td>CV*</td><td>WD*</td><td>0.34217268</td><td>0.954205</td><td>0.0</td><td>0.000938</td><td>0.78164876</td><td>10.973606</td><td>0.562086</td><td>WD*</td><td>0.16768725</td><td>209.25395</td></tr>\n",
-       "<tr><td>-1</td><td>64 .. 25</td><td>150.54540974779889</td><td>2.9726705626470653</td><td>0.056498617</td><td>-0.09341755</td><td>0.19603774</td><td>0.9513494</td><td>0.67751217</td><td>-1</td><td>-1.0</td><td>1 .. 2</td><td>True</td><td>121.049805 .. 152.51727</td><td>0.28894272 .. 0.717161</td><td>0.00071297085 .. 0.0003327147</td><td>20.466846 .. 45.010082</td><td>2.4744158e-09 .. 3.07255e-06</td><td>2.414412 .. 2.8759015</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>52994</td><td>4</td><td>1.3008265</td><td>0.0094726635</td><td>580</td><td>589</td><td>WD*</td><td>WD*</td><td>0.51640373</td><td>0.0</td><td>0.0</td><td>5e-05</td><td>0.5069858</td><td>10.724965</td><td>-0.24329</td><td>WD*</td><td>0.0026768018</td><td>1.6505754</td></tr>\n",
-       "<tr><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td></tr>\n",
-       "<tr><td>-1</td><td>14 .. -1</td><td>289.38193004645626</td><td>-24.317275553240115</td><td>0.13391653</td><td>0.14687224</td><td>0.39796337</td><td>0.0037673684</td><td>1.5858692</td><td>-1</td><td>-1.0</td><td>1 .. 0</td><td>True</td><td>192.32353 .. -1.0</td><td>0.69674796 .. -1.0</td><td>0.0009987517 .. -100.0</td><td>43.771828 .. -1.0</td><td>2.9986267e-12 .. -1.0</td><td>6.3845806 .. -1.0</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>1069077</td><td>1</td><td>-1.0</td><td>-1.0</td><td>4096</td><td>5775</td><td>WD?</td><td>WD*</td><td>0.10722022</td><td>0.0</td><td>0.0</td><td>0.999998</td><td>0.07536331</td><td>-100.0</td><td>-0.220705</td><td>Star*</td><td>-1.0</td><td>-1.0</td></tr>\n",
-       "<tr><td>-1</td><td>12 .. -1</td><td>289.2255855772187</td><td>-24.774705471689778</td><td>0.14479735</td><td>-0.13610634</td><td>0.115526564</td><td>0.80486274</td><td>0.45871088</td><td>-1</td><td>-1.0</td><td>1 .. 0</td><td>True</td><td>114.39852 .. -1.0</td><td>0.61611843 .. -1.0</td><td>0.0017502978 .. -100.0</td><td>27.525177 .. -1.0</td><td>8.0754126e-10 .. -1.0</td><td>5.9696126 .. -1.0</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>1070938</td><td>1</td><td>-1.0</td><td>-1.0</td><td>4098</td><td>5784</td><td>WD?</td><td>WD*</td><td>0.66718286</td><td>0.0</td><td>0.0</td><td>5e-05</td><td>0.17703</td><td>11.894194</td><td>0.047329</td><td>WD*</td><td>-1.0</td><td>-1.0</td></tr>\n",
-       "<tr><td>-1</td><td>17 .. -1</td><td>210.00141652944322</td><td>3.21446645812717</td><td>0.123477906</td><td>0.15057498</td><td>0.41101447</td><td>0.003518554</td><td>1.5325837</td><td>666596</td><td>0.19368891</td><td>1 .. 0</td><td>True</td><td>147.22969 .. -1.0</td><td>0.7023897 .. -1.0</td><td>0.0027712362 .. -100.0</td><td>74.33389 .. -1.0</td><td>2.3525176e-13 .. -1.0</td><td>5.971573 .. -1.0</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>1805505</td><td>1</td><td>-1.0</td><td>-1.0</td><td>4860</td><td>-1</td><td>WD*</td><td>WD*</td><td>0.26789787</td><td>-1.0</td><td>-1.0</td><td>-1.0</td><td>-1.0</td><td>-100.0</td><td>-1.0</td><td>none</td><td>-1.0</td><td>-1.0</td></tr>\n",
-       "<tr><td>-1</td><td>15 .. -1</td><td>207.03531485024087</td><td>-30.479189687581155</td><td>0.13244738</td><td>-0.1224625</td><td>0.14153127</td><td>0.81857866</td><td>0.54091847</td><td>692140</td><td>0.088201396</td><td>1 .. 0</td><td>True</td><td>144.8098 .. -1.0</td><td>0.74000114 .. -1.0</td><td>0.0036297431 .. -100.0</td><td>87.941795 .. -1.0</td><td>1.1032699e-20 .. -1.0</td><td>9.209586 .. -1.0</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>1839206</td><td>1</td><td>-1.0</td><td>-1.0</td><td>4876</td><td>6853</td><td>WD?</td><td>WD*</td><td>0.16205873</td><td>2e-06</td><td>0.000226</td><td>0.999771</td><td>0.362866</td><td>-100.0</td><td>-0.074966</td><td>Star*</td><td>-1.0</td><td>-1.0</td></tr>\n",
-       "<tr><td>-1</td><td>3 .. -1</td><td>123.35939395926069</td><td>3.353465465397161</td><td>0.39177275</td><td>-0.2683002</td><td>0.25808147</td><td>0.41750205</td><td>0.43673292</td><td>-1</td><td>-1.0</td><td>1 .. 0</td><td>True</td><td>9.705873 .. -1.0</td><td>0.41658217 .. -1.0</td><td>7.172699 .. -100.0</td><td>676.54626 .. -1.0</td><td>0.0 .. -1.0</td><td>514.77435 .. -1.0</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>2527679</td><td>1</td><td>-1.0</td><td>-1.0</td><td>-1</td><td>7406</td><td>none</td><td>none</td><td>-1.0</td><td>nan</td><td>nan</td><td>nan</td><td>0.55136967</td><td>11.096676</td><td>nan</td><td>WD*</td><td>-1.0</td><td>-1.0</td></tr>\n",
-       "<tr><td>-1</td><td>14 .. -1</td><td>10.880859092668379</td><td>-9.212517701516024</td><td>0.13539946</td><td>-0.07865829</td><td>0.1780793</td><td>0.44943702</td><td>0.69521385</td><td>-1</td><td>-1.0</td><td>1 .. 0</td><td>True</td><td>131.92952 .. -1.0</td><td>0.53079945 .. -1.0</td><td>0.0007392973 .. -100.0</td><td>17.00289 .. -1.0</td><td>5.6224e-07 .. -1.0</td><td>4.1677933 .. -1.0</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>3074917</td><td>1</td><td>-1.0</td><td>-1.0</td><td>5549</td><td>7859</td><td>WD?</td><td>WD*</td><td>0.44233942</td><td>0.019008</td><td>0.98091</td><td>0.0</td><td>0.6210435</td><td>9.844036</td><td>0.193092</td><td>WD*</td><td>-1.0</td><td>-1.0</td></tr>\n",
-       "</table></div>"
-      ],
-      "text/plain": [
-       "<Table length=47>\n",
-       "fd_src_id   nr_det          ra         ...  ls_peak_pval  ls_model_rchiq\n",
-       "                           deg         ...                              \n",
-       "  int32    int32[2]      float64       ...    float32        float32    \n",
-       "--------- --------- ------------------ ... -------------- --------------\n",
-       "       -1 149 .. 75 334.37177337994245 ...    0.008928546      3.5938787\n",
-       "       -1  67 .. 39   35.2418133124936 ... 0.000118549106      4.4332905\n",
-       "       -1   60 .. 8  334.0564353836822 ...      0.2466465       2.034905\n",
-       "       -1 107 .. 67 334.89381197775845 ...    0.003767448      1.4492389\n",
-       "       -1   43 .. 3 160.98628310403117 ...     0.16768725      209.25395\n",
-       "       -1  64 .. 25 150.54540974779889 ...   0.0026768018      1.6505754\n",
-       "      ...       ...                ... ...            ...            ...\n",
-       "       -1  14 .. -1 289.38193004645626 ...           -1.0           -1.0\n",
-       "       -1  12 .. -1  289.2255855772187 ...           -1.0           -1.0\n",
-       "       -1  17 .. -1 210.00141652944322 ...           -1.0           -1.0\n",
-       "       -1  15 .. -1 207.03531485024087 ...           -1.0           -1.0\n",
-       "       -1   3 .. -1 123.35939395926069 ...           -1.0           -1.0\n",
-       "       -1  14 .. -1 10.880859092668379 ...           -1.0           -1.0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "srcs_ids = [4993 ,13580 ,14504 ,30475 ,50388 ,52994 ,79477 ,120265 ,138783 ,139480 ,162697 ,204419 ,221349 ,228958 ,236839 ,253214 ,253670 ,256433 ,261213 ,331466 ,340464 ,381336 ,390864 ,489430 ,498065 ,525310 ,532554 ,533185 ,540235 ,583838 ,639720 ,645215 ,645730 ,659787 ,666224 ,673175 ,680119 ,691408 ,714140 ,764827 ,1037284 ,1069077 ,1070938 ,1805505 ,1839206 ,2527679 ,3074917 ,]\n",
-      "Total Nr. of sources: 47\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Make selection\n",
-    "sel_otype = rc.tt_sources[\"otype\"] ==  \"RR*\"# \"No*\"#\"HS?\" #\"BS*\" #\"PM*\" # # \"SN*\" #\"EB*\"\n",
-    "sel_otypes = (rc.tt_sources[\"otype\"] ==  \"WD?\")  + (rc.tt_sources[\"otype\"] ==\"WD*\") + (rc.tt_sources[\"ogrp_gaiadr3\"] ==\"WD*\")\n",
-    "sel_flux_nxv = rc.tt_sources[\"flux_nxv\"][:,0]>2\n",
-    "sel_flux_hr = rc.tt_sources[\"hr\"]>2\n",
-    "sel_src_id = rc.tt_sources[\"rg_src_id\"]==15179\n",
-    "sel_period = (rc.tt_sources[\"ls_peak_pval\"]>-0.5) * (rc.tt_sources[\"ls_peak_pval\"]<0.000000573303) * (rc.tt_sources[\"ls_model_rchiq\"]<1.1)# # 3 sigma 0.002699796063, 4 sigma 0.000063342484, 5 sigma 0.000000573303\n",
-    "sel_srcs =  sel_otypes #sel_period #sel_otypes  #sel_src_id  #sel_flux_nxv #sel_otype # sel_flux_nxv_fuv # sel_flux_hr#\n",
-    "\n",
-    "#Display match and simbad table for selected sources\n",
-    "display(rc.tt_sources[sel_srcs])\n",
-    "\n",
-    "#Print oout list of source IDs to be used for further use, e.g. in inspect_sources.ipynb\n",
-    "print(\"srcs_ids = [\", end=\"\")\n",
-    "for src_id in rc.tt_sources[sel_srcs][\"rg_src_id\"].data:\n",
-    "    print(src_id,\",\", end=\"\")\n",
-    "print(\"]\")\n",
-    "print(\"Total Nr. of sources:\",sel_srcs.sum())"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "faee6507-701e-416f-8b93-8dc8c8bbcf6c",
@@ -850,7 +759,7 @@
     "tt_nodes.rename_column(\"Id\", \"otype\")\n",
     "#display(tt_nodes)\n",
     "add_ogrp(tt_nodes)\n",
-    "tt_nodes[\"otype\",\"Candidate\",\"Description\",\"ogrp\",\"Label\",\"Category\",\"Subcategory\"].pprint_all()"
+    "#tt_nodes[\"otype\",\"Candidate\",\"Description\",\"ogrp\",\"Label\",\"Category\",\"Subcategory\"].pprint_all()"
    ]
   },
   {
