--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -115,10 +115,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4e438a82-e94a-43c6-89ce-49862abc76dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4009dfa8833e4616820f1ab613f9bcf5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='rg_src_id', options=(4993, 13580, 14504, 30475, 50388, 52994, 7947…"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Define displayed tables and columns\n",
     "disp_tt_sources = ['ra','dec','rg_src_id','flux_cpval','nr_det','pos_err','pos_xv','pos_cpval','pos_rchiq','coadd_src_id','coadd_dist','obs_filter_id','flux','flux_err','flux_nxv','flux_rchiq','coadd_ffactor',\n",
@@ -148,13 +164,13 @@
     "    plt.show()\n",
     "\n",
     "    #If lomb scargle present and signal is at more than 3 sigma plot it too\n",
-    "    if \"tt_lombscargle\" in tc_src._table_names:\n",
-    "        if show_LS or tc_src.tt_lombscargle[\"ls_peak_pval\"] < 0.002699796063:\n",
-    "            fig_ls, axs_ls = plt.subplots(2,2,figsize=(15, 10),squeeze=True, num=\"LS \" + str(rg_src_id), clear=True)\n",
-    "            axs_ls = axs_ls.flatten()\n",
-    "            vvis.plot_lombscargle(tc_src.tt_source_lc, ax=axs_ls[0], ax_phase = axs_ls[1]) #, ax_lc = axs[0]\n",
-    "            vvis.plot_lombscargle(tc_src.tt_source_lc, ax=axs_ls[2],obs_filter=\"FUV\", ax_phase = axs_ls[3])\n",
-    "            plt.show()\n",
+    "    if show_LS or tc_src.tt_lombscargle[\"ls_peak_pval\"] < 0.002699796063:\n",
+    "        fig_ls, axs_ls = plt.subplots(2,2,figsize=(15, 10),squeeze=True, num=\"LS \" + str(rg_src_id), clear=True)\n",
+    "        axs_ls = axs_ls.flatten()\n",
+    "        vvis.plot_lombscargle(tc_src.tt_source_lc, ax=axs_ls[0], ax_phase = axs_ls[1]) #, ax_lc = axs[0]\n",
+    "        vvis.plot_lombscargle(tc_src.tt_source_lc, ax=axs_ls[2],obs_filter=\"FUV\", ax_phase = axs_ls[3])\n",
+    "        plt.show()\n",
+    "        if \"tt_lombscargle\" in tc_src._table_names:\n",
     "            print(\"\\n tt_lombscargle :\")\n",
     "            display(tc_src.tt_lombscargle)\n",
     "\n",
@@ -182,14 +198,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b4b6f33c-ac4d-4467-a780-804bee76b0dd",
    "metadata": {
     "jupyter": {
      "source_hidden": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6218523dd0664081920c6c9bfc3eeb67",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=4, description='block_nr', max=9), Output()), _dom_classes=('widget-inte…"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nr_blocks = int(nr_srcs/lc_block_srcs)+1 \n",
     "def plot_lc_range(block_nr):\n",
@@ -212,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c038cd88-42e8-4897-a277-bbf207f4c930",
    "metadata": {
     "jupyter": {
@@ -311,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "aaa5317e-41b7-47fe-9dca-29ae84bc127b",
    "metadata": {
     "jupyter": {
@@ -337,10 +369,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "22812e30-f572-4316-8360-7c239c95c6d2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3] [0.66666667 0.33333333 0.        ]\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.array([1,2,3])\n",
     "b = (a%1.5)/1.5\n",
