Adding multiple spectra SDSS
Former-commit-id: 0b658a42d20e0ab9ce8b4a4434a681caa49ac997

--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -30,7 +30,7 @@
     "show_skymaps = False\n",
     "show_sed = True\n",
     "show_LS = True\n",
-    "load_src_from_file = True\n",
+    "load_src_from_file = False\n",
     "lc_block_srcs = 5 #Setup light curve plotting parameters\n",
     "\n",
     "#srcs_ids = [2996 ,11821 ,55034 ,61491 ,64360 ,73354 ,76243 ,92867 ,104078 ,106745 ,124860 ,162490 ,182622 ,199884 ,226975 ,267514 ,588567 ,599887 ,789511 ,814134 ,] # WD and candidates, including GAIA info\n",
@@ -122,7 +122,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4009dfa8833e4616820f1ab613f9bcf5",
+       "model_id": "c99f2de98d9940bfa0f019a3c46aae7e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -209,7 +209,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6218523dd0664081920c6c9bfc3eeb67",
+       "model_id": "9cef6768c8ba4fd1b3a1a538c67c9d47",
        "version_major": 2,
        "version_minor": 0
       },
