Multiple small improvements
Former-commit-id: 9587ccbb212a7a0ae0f1e97290c587849b3707d2

--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -29,8 +29,8 @@
     "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\"_cat.fits\"\n",
     "show_skymaps = False\n",
     "show_sed = True\n",
-    "show_LS = True\n",
-    "load_src_from_file = False\n",
+    "force_show_LS = False\n",
+    "load_src_from_file = True\n",
     "lc_block_srcs = 5 #Setup light curve plotting parameters\n",
     "\n",
     "#srcs_ids = [2996 ,11821 ,55034 ,61491 ,64360 ,73354 ,76243 ,92867 ,104078 ,106745 ,124860 ,162490 ,182622 ,199884 ,226975 ,267514 ,588567 ,599887 ,789511 ,814134 ,] # WD and candidates, including GAIA info\n",
@@ -52,13 +52,6 @@
      "text": [
       "Nr sources: 10413 selected: 10413\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: UnitsWarning: 'log(cm.s**-2)' did not parse as fits unit: 'log' is not a recognized function If this is meant to be a custom unit, define it with 'u.def_unit'. To have it recognized inside a file reader or other code, enable it with 'u.add_enabled_units'. For details, see https://docs.astropy.org/en/latest/units/combining_and_defining.html [astropy.units.core]\n"
-     ]
     }
    ],
    "source": [
@@ -68,7 +61,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import warnings\n",
-    "#warnings.filterwarnings('ignore')\n",
+    "warnings.filterwarnings('ignore')\n",
     "\n",
     "from regions import CircleSkyRegion\n",
     "from astropy import units as uu\n",
@@ -122,7 +115,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a41068743b041e7bc702a664439fc2d",
+       "model_id": "c321adcfe7e44da39430361aa8476dc7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -137,15 +130,15 @@
    ],
    "source": [
     "#Define displayed tables and columns\n",
-    "disp_tt_sources = ['ra','dec','rg_src_id','flux_cpval','nr_det','pos_err','pos_xv','pos_cpval','pos_rchiq','coadd_src_id','coadd_dist','obs_filter_id','flux','flux_err','flux_nxv','flux_rchiq','coadd_ffactor',\n",
+    "disp_tt_sources = ['ra','dec','rg_src_id','flux_cpval','flux',\"flux_ne\",'nr_det','pos_err','pos_xv','pos_cpval','pos_rchiq','coadd_src_id','coadd_dist','obs_filter_id','flux_err','flux_nxv','flux_rchiq','coadd_ffactor',\n",
     "                   'coadd_fdiff_s2n','nr_fd_srcs','hr','hr_err'] #'fd_src_id','rg_fd_id,,'pos_var','flux_var','sel', ,'simbad_match_id','gaiadr3_match_id'\n",
-    "disp_tt_simbad = ['ogrp','otypes','main_id','otype','ra','dec','ra_prec','dec_prec','coo_err_maja','coo_err_mina','coo_err_angle','coo_qual','coo_wavelength','coo_bibcode','distance_distance','distance_q','distance_unit',\n",
-    "                  'distance_merr','distance_perr','distance_method','distance_bibcode','match_distance','rvz_type','rvz_radvel','rvz_error','rvz_qual','rvz_wavelength','rvz_bibcode','z_value','sp_type','sp_qual',\n",
-    "                  'sp_bibcode','simbad_match_id'] #,'rg_src_id',,'script_number_id'\n",
-    "disp_tt_gaiadr3 = ['ogrp','Gmag_abs','BP-RP','ra','dec','Source','e_RA_ICRS','e_DE_ICRS','Plx','e_Plx','PM','pmRA','e_pmRA','pmDE','e_pmDE','RUWE','FG','e_FG','Gmag','FBP','e_FBP','BPmag','FRP','e_FRP','RPmag','RV','e_RV',\n",
+    "disp_tt_simbad = ['ogrp','otypes','main_id','otype','sp_type','sp_bibcode','ra','dec','ra_prec','dec_prec','coo_err_maja','coo_err_mina','coo_err_angle','coo_qual','coo_wavelength','coo_bibcode','distance_distance','distance_q','distance_unit',\n",
+    "                  'distance_merr','distance_perr','distance_method','distance_bibcode','match_distance','rvz_type','rvz_radvel','rvz_error','rvz_qual','rvz_wavelength','rvz_bibcode','z_value','sp_qual','simbad_match_id'] #,'rg_src_id',,'script_number_id'\n",
+    "disp_tt_gaiadr3 = ['ogrp',\"Plx_dist\",\"VarFlag\", \"o_Gmag\",'Gmag_abs','BP-RP','ra','dec','Source','e_RA_ICRS','e_DE_ICRS','Plx','e_Plx','PM','pmRA','e_pmRA','pmDE','e_pmDE','RUWE','FG','e_FG','Gmag','FBP','e_FBP','BPmag','FRP','e_FRP','RPmag','RV','e_RV',\n",
     "                   'Vbroad','GRVSmag','QSO','Gal','NSS','XPcont','XPsamp','RVS','EpochPh','EpochRV','MCMCGSP','MCMCMSC','And','Teff','logg','__Fe_H_','Dist','A0','HIP','PS1','SDSS13','SKYM2','TYC2','URAT1','AllWISE','APASS9',\n",
     "                   'GSC23','RAVE5','_2MASS','RAVE6','RAJ2000','DEJ2000','PQSO','PGal','PSS','RPlx','match_distance','gaiadr3_match_id'] #,'_q',,'rg_src_id'\n",
     "dd_tab_col = {\"tt_sources\":disp_tt_sources, \"tt_simbad\":disp_tt_simbad, \"tt_gaiadr3\":disp_tt_gaiadr3}\n",
+    "\n",
     "\n",
     "def display_src_info(rg_src_id=0):\n",
     "\n",
@@ -154,17 +147,21 @@
     "\n",
     "    #Prepare figure\n",
     "\n",
-    "    fig, axs = plt.subplots(1,2,figsize=(20, 6),squeeze=True, num=\"Source ID \" + str(rg_src_id), clear=True, gridspec_kw={'width_ratios': [2, 1]})\n",
-    "    axs = axs.flatten()\n",
+    "    fig, ax = plt.subplots(1,1,figsize=(18, 6),squeeze=True, num=\"LC source ID \" + str(rg_src_id), clear=True) #, gridspec_kw={'width_ratios': [2, 1]}\n",
+    "    _ = vvis.plot_light_curve(tc_src, ax = ax)\n",
+    "    plt.show()\n",
+    "    #axs = axs.flatten()\n",
     "    \n",
     "    #Plot light curve und SED\n",
-    "    vvis.plot_light_curve(tc_src, ax = axs[0]) #\n",
+    "     #\n",
     "    if show_sed:\n",
-    "        vvis.plot_sed(tc_src,ax = axs[1])\n",
+    "        fig, ax = plt.subplots(1,1,figsize=(12, 8),squeeze=True, num=\"Spec source ID \" + str(rg_src_id), clear=True) \n",
+    "        _ = vvis.plot_sed(tc_src,ax = ax)\n",
     "    plt.show()\n",
     "\n",
     "    #If lomb scargle present and signal is at more than 3 sigma plot it too\n",
-    "    if show_LS or tc_src.tt_lombscargle[\"ls_peak_pval\"] < 0.002699796063:\n",
+    "    show_LS = \"tt_lombscargle\" in tc_src._table_names and tc_src.tt_lombscargle[\"ls_peak_pval\"] < 0.002699796063\n",
+    "    if force_show_LS or show_LS:\n",
     "        fig_ls, axs_ls = plt.subplots(2,2,figsize=(15, 10),squeeze=True, num=\"LS \" + str(rg_src_id), clear=True)\n",
     "        axs_ls = axs_ls.flatten()\n",
     "        vvis.plot_lombscargle(tc_src.tt_source_lc, ax=axs_ls[0], ax_phase = axs_ls[1]) #, ax_lc = axs[0]\n",
@@ -209,7 +206,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a0f617017141412db015af4748e674b3",
+       "model_id": "c2b7dfb6ef7c4c819793c85527110db1",
        "version_major": 2,
        "version_minor": 0
       },
