Changed plotting range of SED
Former-commit-id: fd771c40bf81357dd79e73841d5e69e22dca8205

--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -37,7 +37,8 @@
     "srcs_ids = []\n",
     "srcs_ids = [4993 ,13580 ,14504 ,30475 ,50388 ,52994 ,79477 ,120265 ,138783 ,139480 ,162697 ,204419 ,221349 ,228958 ,236839 ,253214 ,253670\n",
     "            ,256433 ,261213 ,331466 ,340464 ,381336 ,390864 ,489430 ,498065 ,525310 ,532554 ,533185 ,540235 ,583838 ,639720 ,645215 ,645730\n",
-    "            ,659787 ,666224 ,673175 ,680119 ,691408 ,714140 ,764827 ,1037284 ,1069077 ,1070938 ,1805505 ,1839206 ,2527679 ,3074917 ,] # WD ALL_10-800-LOOSE"
+    "            ,659787 ,666224 ,673175 ,680119 ,691408 ,714140 ,764827 ,1037284 ,1069077 ,1070938 ,1805505 ,1839206 ,2527679 ,3074917 ,] # WD ALL_10-800-LOOSE\n",
+    "srcs_ids = [4993,14504,52994,120265,221349,236839,253214,381336,525310,533185,639720,666224,673175,680119,1070938] # # WD ALL_10-800-LOOSE BB SED# Additional candidates 139480,204419,532554,659787,79477,\n"
    ]
   },
   {
@@ -115,12 +116,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f7eb03eb0c5c462fbd93a4bc769e9899",
+       "model_id": "c1f145e1fbec4839846ed3b188ef9942",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='rg_src_id', options=(4993, 13580, 14504, 30475, 50388, 52994, 7947…"
+       "interactive(children=(Dropdown(description='rg_src_id', options=(4993, 14504, 52994, 120265, 221349, 236839, 2…"
       ]
      },
      "execution_count": 3,
@@ -206,12 +207,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e69d1ab00c67433d829434832b097632",
+       "model_id": "3d9ebc1c626e4f05b092aa841cc3327e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=4, description='block_nr', max=9), Output()), _dom_classes=('widget-inte…"
+       "interactive(children=(IntSlider(value=1, description='block_nr', max=3), Output()), _dom_classes=('widget-inte…"
       ]
      },
      "execution_count": 4,
