Added GFCAT cross match
Former-commit-id: 1389b737e97bd19c299adcc950926d05a123ee21

--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -132,7 +132,7 @@
    "source": [
     "#Define displayed tables and columns\n",
     "disp_tt_sources = ['ra','dec','rg_src_id','flux_cpval','flux',\"flux_ne\",'nr_det','pos_err','pos_xv','pos_cpval','pos_rchiq','coadd_src_id','coadd_dist','obs_filter_id','flux_err','flux_nxv','flux_rchiq','coadd_ffactor',\n",
-    "                   'coadd_fdiff_s2n','nr_fd_srcs','hr','hr_err'] #'fd_src_id','rg_fd_id,,'pos_var','flux_var','sel', ,'simbad_match_id','gaiadr3_match_id'\n",
+    "                   'coadd_fdiff_s2n','nr_fd_srcs','hr','hr_err','gfcat_src_id'] #'fd_src_id','rg_fd_id,,'pos_var','flux_var','sel', ,'simbad_match_id','gaiadr3_match_id', 'gfcat_dist'\n",
     "disp_tt_simbad = ['ogrp','otypes','main_id','otype','sp_type','sp_bibcode','ra','dec','ra_prec','dec_prec','coo_err_maja','coo_err_mina','coo_err_angle','coo_qual','coo_wavelength','coo_bibcode','distance_distance','distance_q','distance_unit',\n",
     "                  'distance_merr','distance_perr','distance_method','distance_bibcode','match_distance','rvz_type','rvz_radvel','rvz_error','rvz_qual','rvz_wavelength','rvz_bibcode','z_value','sp_qual','simbad_match_id'] #,'rg_src_id',,'script_number_id'\n",
     "disp_tt_gaiadr3 = ['ogrp',\"Plx_dist\",\"VarFlag\", \"o_Gmag\",'Gmag_abs','BP-RP','ra','dec','Source','e_RA_ICRS','e_DE_ICRS','Plx','e_Plx','PM','pmRA','e_pmRA','pmDE','e_pmDE','RUWE','FG','e_FG','Gmag','FBP','e_FBP','BPmag','FRP','e_FRP','RPmag','RV','e_RV',\n",
