Adding artifact variables to light curve
Former-commit-id: 119fd50e195f2b01375a81cf86c531bcc1e49f60

--- a/vasca/examples/convert_rg_src_ids.ipynb
+++ b/vasca/examples/convert_rg_src_ids.ipynb
@@ -17,15 +17,17 @@
    "source": [
     "from astropy import units as uu\n",
     "#First region, usually the old one\n",
-    "region1_name = \"ALL_10-800\"  #\"ALL_10-800\" #\"CAINGSGII_10-800\"  #\"TDS\" #\"CAINGSGII_10-800\"  #\"TDS\" # \"MDIS_10-800\" # \"TDS\" # _ELAISN1\n",
-    "region1_fname = \"./vasca_pipeline/\"+region1_name+\"/region_\"+region1_name+\".fits\"\n",
+    "region1_name = \"ALL_10-800_LOOSE\"  #\"ALL_10-800\" #\"CAINGSGII_10-800\"  #\"TDS\" #\"CAINGSGII_10-800\"  #\"TDS\" # \"MDIS_10-800\" # \"TDS\" # _ELAISN1\n",
+    "region1_fname = \"./vasca_pipeline/\"+region1_name+\"/region_\"+region1_name+\"_cat.fits\"\n",
     "\n",
     "#Source IDs to be converted\n",
-    "srcs_ids1 =  [2996 ,11821 ,55034 ,61491 ,64360 ,73354 ,76243 ,92867 ,104078 ,106745 ,124860 ,162490 ,182622 ,199884 ,226975 ,267514 ,588567 ,599887 ,789511 ,814134 ,] # WD and candidates, including GAIA info\n",
+    "srcs_ids1 = [4993 ,13580 ,14504 ,30475 ,50388 ,52994 ,79477 ,120265 ,138783 ,139480 ,162697 ,204419 ,221349 ,228958 ,236839 ,253214 ,253670\n",
+    "            ,256433 ,261213 ,331466 ,340464 ,381336 ,390864 ,489430 ,498065 ,525310 ,532554 ,533185 ,540235 ,583838 ,639720 ,645215 ,645730\n",
+    "            ,659787 ,666224 ,673175 ,680119 ,691408 ,714140 ,764827 ,1037284 ,1069077 ,1070938 ,1805505 ,1839206 ,2527679 ,3074917 ,] # WD ALL_10-800-LOOSE\n",
     "\n",
     "#Second region, usually the new one\n",
-    "region2_name = \"ALL_10-800_LOOSE\"\n",
-    "region2_fname = \"./vasca_pipeline/\"+region2_name+\"/region_\"+region2_name+\".fits\"\n",
+    "region2_name = \"ALL_10-800\"\n",
+    "region2_fname = \"./vasca_pipeline/\"+region2_name+\"/region_\"+region2_name+\"_cat.fits\"\n",
     "\n",
     "#Maximum distance to be considered the same source\n",
     "dist_max = 1*uu.arcsec"
@@ -70,34 +72,43 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: UnitsWarning: 'log(cm.s**-2)' did not parse as fits unit: 'log' is not a recognized function If this is meant to be a custom unit, define it with 'u.def_unit'. To have it recognized inside a file reader or other code, enable it with 'u.add_enabled_units'. For details, see https://docs.astropy.org/en/latest/units/combining_and_defining.html [astropy.units.core]\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "rg_src_id rg_src_id1        dist_id1       \n",
       "                             arcsec        \n",
       "--------- ---------- ----------------------\n",
-      "     8215       2996  0.0006461470132057625\n",
-      "    32448      11821  5.868269211343778e-11\n",
-      "    67711      92867    0.21070969843371945\n",
-      "   151796      55034    0.03358798928417413\n",
-      "   166179      61491                    0.0\n",
-      "   172775      64360     0.0200684618342995\n",
-      "   193067      73354 1.4339030727067295e-10\n",
-      "   199832      76243   0.017188398987915875\n",
-      "   259271     104078   0.023469826296120298\n",
-      "   265150     106745   0.024960750174426984\n",
-      "   305192     124860   0.013248172871326059\n",
-      "   388172     162490     0.1233475292268099\n",
-      "   432606     182622    0.07792410812055205\n",
-      "   472623     199884  5.126678565123436e-11\n",
-      "   535864     226975    0.19300960416390975\n",
-      "   625693     267514  6.057443324924953e-10\n",
-      "  1521738     588567    0.11106603209001159\n",
-      "  1551422     599887                    0.0\n",
-      "  2136829     789511     0.2591118790872122\n",
-      "  2210890     814134     0.8595619562530208\n",
-      "srcs_ids = [8215 ,32448 ,67711 ,151796 ,166179 ,172775 ,193067 ,199832 ,259271 ,265150 ,305192 ,388172 ,432606 ,472623 ,535864 ,625693 ,1521738 ,1551422 ,2136829 ,2210890 ,]\n",
-      "20 counterparts found, for 20 sources\n"
+      "     8215      13580 2.5469069747238155e-11\n",
+      "    32448      50388  2.289999370653732e-11\n",
+      "    54184      79477    0.01262109044767649\n",
+      "    98746     138783                    0.0\n",
+      "   151796     204419                    0.0\n",
+      "   166179     221349                    0.0\n",
+      "   172775     228958  4.092245627246673e-10\n",
+      "   193067     253214                    0.0\n",
+      "   199832     261213  9.999674717101199e-11\n",
+      "   259271     331466 1.0910436600057058e-10\n",
+      "   265150     340464  1.658875934128795e-10\n",
+      "   297278     381336 1.0196898108668681e-10\n",
+      "   305192     390864 1.8172551574936445e-10\n",
+      "   388172     489430  2.519746251174169e-10\n",
+      "   432606     540235  1.144999685326866e-11\n",
+      "   472623     583838 1.1103972181471528e-10\n",
+      "   535864     659787  1.144999685326866e-11\n",
+      "   541266     666224 2.8715562699842645e-11\n",
+      "   625693     764827                    0.0\n",
+      "  1521738    1805505 1.0216719607309669e-10\n",
+      "  1551422    1839206 1.7783888024907468e-10\n",
+      "  2136829    2527679                    0.0\n",
+      "srcs_ids = [8215 ,32448 ,54184 ,98746 ,151796 ,166179 ,172775 ,193067 ,199832 ,259271 ,265150 ,297278 ,305192 ,388172 ,432606 ,472623 ,535864 ,541266 ,625693 ,1521738 ,1551422 ,2136829 ,]\n",
+      "22 counterparts found, for 47 sources\n"
      ]
     }
    ],
